Alert "open Chat": corrected z-index

--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -202,7 +202,7 @@ button.close {
     margin: 0px auto;
     position: fixed;
     transition: all 0.5s ease-in-out 0s;
-    z-index: 1031;
+    z-index: 1030;
     top: 10px;
     left: 245px;
     right: 0px;
